get albums and media by user added to users controllers
