# swagger-output.json
@@ -68,31 +68,6 @@
             }
           }
         }
-      },
-      "post": {
-        "tags": [
-          "Users"
-        ],
-        "summary": "Adds a new User.",
-        "description": "Adds a new User to the database .",
-        "operationId": "addUser",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "$ref": "#/definitions/User"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "User successfully sent to database",
-            "schema": {
-              "$ref": "#/definitions/User"
-            }
-          }
-        }
       }
     },
     "/users/{id}": {
@@ -120,7 +95,120 @@
             }
           }
         }
-      },
+      }
+    },
+    "/users/userAlbums/{id}": {
+      "get": {
+        "tags": [
+          "Users"
+        ],
+        "summary": "Get all albums from a user.",
+        "description": "Get all albums from a user.",
+        "operationId": "userAlbums",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "User Id"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successfully returned albums from this user",
+            "schema": {
+              "$ref": "#/definitions/Albums"
+            }
+          }
+        }
+      }
+    },
+    "/users/userClips/{id}": {
+      "get": {
+        "tags": [
+          "Users"
+        ],
+        "summary": "Get all Clips from a user.",
+        "description": "Get Clips albums from a user.",
+        "operationId": "userClips",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "User Id"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successfully returned Clips from this user",
+            "schema": {
+              "$ref": "#/definitions/Medias"
+            }
+          }
+        }
+      }
+    },
+    "/users/userPhotos/{id}": {
+      "get": {
+        "tags": [
+          "Users"
+        ],
+        "summary": "Get all Photos from a user.",
+        "description": "Get all Photos from a user.",
+        "operationId": "userPhotos",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "User Id"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successfully returned Photos from this user",
+            "schema": {
+              "$ref": "#/definitions/Medias"
+            }
+          }
+        }
+      }
+    },
+    "/users/add": {
+      "post": {
+        "tags": [
+          "Users"
+        ],
+        "summary": "Adds a new User.",
+        "description": "Adds a new User to the database .",
+        "operationId": "addUser",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "$ref": "#/definitions/User"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "User successfully sent to database",
+            "schema": {
+              "$ref": "#/definitions/User"
+            }
+          },
+          "422": {
+            "description": "Unprocessable Entity"
+          }
+        }
+      }
+    },
+    "/users/edit/{id}": {
       "put": {
         "tags": [
           "Users"
@@ -149,9 +237,14 @@
             "schema": {
               "$ref": "#/definitions/User"
             }
+          },
+          "422": {
+            "description": "Unprocessable Entity"
           }
         }
-      },
+      }
+    },
+    "/users/delete/{id}": {
       "delete": {
         "tags": [
           "Users"
@@ -378,6 +471,9 @@
             "schema": {
               "$ref": "#/definitions/Album"
             }
+          },
+          "422": {
+            "description": "Unprocessable Entity"
           }
         }
       }
@@ -411,6 +507,9 @@
             "schema": {
               "$ref": "#/definitions/Album"
             }
+          },
+          "422": {
+            "description": "Unprocessable Entity"
           }
         }
       }
@@ -500,7 +599,7 @@
             "name": "body",
             "in": "body",
             "schema": {
-              "$ref": "#/definitions/Clips"
+              "$ref": "#/definitions/Media"
             }
           }
         ],
@@ -623,7 +722,7 @@
         },
         "user": {
           "type": "string",
-          "example": "User's name who created the media"
+          "example": "User's Id"
         },
         "cameraUsed": {
           "type": "string",
@@ -662,7 +761,7 @@
         },
         "user": {
           "type": "string",
-          "example": "Owner of the Album"
+          "example": "User's Id"
         },
         "tags": {
           "type": "array",
